<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_transaction_card_view"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_from"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/From"
                android:textColor="#9370db"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/tv_from_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:hint="@string/Not_Selected"
                android:paddingStart="10dp"
                android:paddingEnd="3dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#9370db"
                android:text="@string/Amount"
                android:layout_marginEnd="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:padding="6dp"
            android:id="@+id/to_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/To"
                android:textColor="#9370db"
                android:textStyle="bold"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_to_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:paddingStart="10dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:paddingEnd="3dp"
                android:hint="@string/Transaction_Cancelled" />

            <TextView
                android:id="@+id/tv_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:hint="@string/Not_Set"
                android:layout_marginEnd="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:padding="6dp"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Date"
                android:textColor="#9370db"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_time"
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Time"
                android:textColor="#9370db"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                android:textSize="18sp"
                android:gravity="end" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>