<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserData">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="15dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_person"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User_Data_Name"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/purple_700"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User_Data_Account"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/tv_account_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User_Data_Account1"
            android:layout_marginStart="25dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User_Data_Email"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/tv_email_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User_Data_Email1"
            android:layout_marginStart="25dp"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User_Data_IFSC"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/tv_ifsc_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User_Data_IFSC1"
            android:layout_marginStart="25dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_phone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User_Data_Phone"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/tv_phone_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User_Data_Phone1"
            android:layout_marginStart="25dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_balance" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User_Data_Balance"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="5dp" />

        <TextView
            android:id="@+id/tv_avail_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/User_Data_Balance1"
            android:layout_marginStart="25dp"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_transfer_money"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="@drawable/mybutton"
            android:text="@string/Transfer_Money">
        </Button>

    </LinearLayout>

</LinearLayout>